--- a/app/views/astro_templates/show.html.erb
+++ b/app/views/astro_templates/show.html.erb
@@ -30,6 +30,11 @@
             </tr>
           <% end %>
         <% end %>
+        <!-- Additional row for Stock Ticker -->
+        <tr>
+          <td>Stock Ticker</td>
+          <td><%= @random_ticker %></td>
+        </tr>
       </tbody>
     </table>
   <% end %>
