--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,15 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <%= yield %>
-  </body>
+<body>
+  <% if logged_in? %>
+    <%= form_with(url: logout_path, method: :delete) do %>
+      <%= submit_tag 'Logout' %>
+    <% end %>
+  <% else %>
+    <%= link_to 'Login', login_path %>
+  <% end %>
+
+  <%= yield %>
+</body>
 </html>
